--- a/colibri/css/style.css
+++ b/colibri/css/style.css
@@ -1213,7 +1213,7 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     .form-short{
         width: 350px !important;
     }
-    .button-header{
+    .body > div.sticky > header > button{
         display: none;
     }
     .header-wrapper{
