--- a/test_game/style.css
+++ b/test_game/style.css
@@ -23,39 +23,57 @@ body{
     background-color: #ffffff;
     overflow: hidden;
     display: none;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bg-text{
     font-weight: 800;
     font-size: 221px;
     color: #f0f0f0;
-    letter-spacing: -20px;
-    line-height: 0.58;
-    position: relative;
-    left: -20px;
+    letter-spacing: -11px;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    position: absolute;
+    top: 50px;
+    left: -26px;
+    white-space: nowrap;
 }
 
 .forms{
     text-align: center;
-    margin-top: -50px;
     z-index: 2;
     position: relative;
+    margin-top: -28px;
 }
 
-.button,
-input{
+.button, input {
     width: 100%;
     max-width: 470px;
-    height: 60px;
+    height: 62px;
     padding: 0;
     border-width: 0;
     border-radius: 7px;
-}
+    }
 
 input{
-    box-shadow: inset;
-    background: transparent;
-    border: 1px solid #e5e5e5;
+    padding-left: 18px;
+    padding-right: 18px;
+    box-sizing: border-box;
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: -2px;
+}
+
+input[type="mail"] {
+    margin-bottom: 18px;
+}
+    
+    input[type="password"] {
+    margin-bottom: 9px;
 }
 
 input::placeholder{
@@ -65,10 +83,13 @@ input::placeholder{
     padding-left: 22px;
 }
 
-.button{
+.button {
     cursor: pointer;
-
-}
+    margin-top: 32px;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    }
 
 .close {
     position: absolute;
