--- a/test_game/style.css
+++ b/test_game/style.css
@@ -66,6 +66,7 @@ input{
     font-size: 22px;
     font-weight: 700;
     letter-spacing: -2px;
+    background: transparent;
 }
 
 input[type="mail"] {
