--- a/test_game/style.css
+++ b/test_game/style.css
@@ -145,7 +145,9 @@ input:invalid{
 
 .button:focus{
     border: 1px solid #999999;
-    background-color: #ff811f;
+    background-color: #ff6700;
+    font-size: 24px;
+    letter-spacing: -1px;
 }
 
 .button-active{
