--- a/test_game/style.css
+++ b/test_game/style.css
@@ -3,16 +3,25 @@ html{
 }
 
 body{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     height: 100vh;
+    background: -webkit-gradient(linear, left bottom, right top, from(#091341), to(#1a4f9b));
+    background: -o-linear-gradient(bottom left, #091341, #1a4f9b);
     background: linear-gradient(to top right, #091341, #1a4f9b);
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .popup{
@@ -23,9 +32,14 @@ body{
     background-color: #ffffff;
     display: none;
     position: relative;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.18);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.18);
+            box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.18);
 }
 
 .wrapper{
@@ -69,14 +83,16 @@ body{
 input{
     padding-left: 18px;
     padding-right: 18px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-size: 22px;
     font-weight: 700;
     letter-spacing: 0px;
     background: transparent;
     border: 1px solid #e5e5e5;
     outline: none;
-    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1) inset;
+    -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1) inset;
+            box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1) inset;
 }
 
 input[type="email"] {
@@ -88,6 +104,34 @@ input[type="password"] {
     margin-bottom: 9px;
 }
 
+input::-webkit-input-placeholder{
+    font-weight: 600;
+    color: #646464;
+    font-size: 20px;
+    letter-spacing: 0px;
+}
+
+input::-moz-placeholder{
+    font-weight: 600;
+    color: #646464;
+    font-size: 20px;
+    letter-spacing: 0px;
+}
+
+input:-ms-input-placeholder{
+    font-weight: 600;
+    color: #646464;
+    font-size: 20px;
+    letter-spacing: 0px;
+}
+
+input::-ms-input-placeholder{
+    font-weight: 600;
+    color: #646464;
+    font-size: 20px;
+    letter-spacing: 0px;
+}
+
 input::placeholder{
     font-weight: 600;
     color: #646464;
@@ -95,8 +139,7 @@ input::placeholder{
     letter-spacing: 0px;
 }
 
-.input-wrapper:before{
-    content: '';
+.error{
     width: 22px;
     height: 22px;
     border-radius: 50%;
@@ -104,12 +147,13 @@ input::placeholder{
     position: absolute;
     left: 76.5%;
     top: 20px;
-    box-shadow: 0px 0px 27px 1px #ff3462;
+    -webkit-box-shadow: 0px 0px 27px 1px #ff3462;
+            box-shadow: 0px 0px 27px 1px #ff3462;
+    z-index: 55;
     display: none;
 }
 
-.input-wrapper:after{
-    content: '';
+.ok{
     width: 22px;
     height: 22px;
     border-radius: 50%;
@@ -117,7 +161,9 @@ input::placeholder{
     position: absolute;
     left: 76.5%;
     top: 20px;
-    box-shadow: 0px 0px 27px 1px #00c919;
+    -webkit-box-shadow: 0px 0px 27px 1px #00c919;
+            box-shadow: 0px 0px 27px 1px #00c919;
+    z-index: 55;
     display: none;
 }
 
@@ -139,7 +185,8 @@ input:invalid{
     font-weight: bold;
     letter-spacing: 1px;
     color: #ffffff;
-    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1) inset;
+    -webkit-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1) inset;
+            box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1) inset;
     outline: none;
 }
 
@@ -154,7 +201,8 @@ input:invalid{
     cursor: pointer;
     background-color: #ff811f;
     border: 1px solid #e5e5e5;
-    box-shadow: 0px -3px 0px 0px #e5741c inset;
+    -webkit-box-shadow: 0px -3px 0px 0px #e5741c inset;
+            box-shadow: 0px -3px 0px 0px #e5741c inset;
     text-shadow: 0px 3px 7px #d16a19 inset;
 }
 
@@ -179,11 +227,15 @@ input:invalid{
 }
 
 .close:before {
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
 }
 
 .close:after {
-    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
 }
 
 
@@ -202,6 +254,18 @@ input:invalid{
         width: 90%;
     }
     input{
+        font-size: 15px;
+    }
+    input::-webkit-input-placeholder{
+        font-size: 15px;
+    }
+    input::-moz-placeholder{
+        font-size: 15px;
+    }
+    input:-ms-input-placeholder{
+        font-size: 15px;
+    }
+    input::-ms-input-placeholder{
         font-size: 15px;
     }
     input::placeholder{
