--- a/form/style.css
+++ b/form/style.css
@@ -11,6 +11,12 @@
     outline: none;
     text-shadow: none !important;
     font-weight: 400 !important;
+    width: 100%;
+    padding: 15px 40px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    margin: 0 auto;
 }
 
 .button-submit:hover {
@@ -38,11 +44,11 @@
 }
 
 .card-content{
-    display: table;
     width: 100%;
-    background-color: rgba(255,255,255,0.87);
+    background-color: rgba(238, 238, 238, 0.87);
     padding: 0;
     position: relative;
+    display: none;
 }
 
 .form-request{
@@ -50,7 +56,8 @@
     min-height: 471px;
     max-height: 864px;
     float: right;
-    width: 390px;
+    width: 100%;
+    max-width: 390px;
     padding: 0 50px 0 48px;
     position: relative;
     z-index: 1;
@@ -61,6 +68,10 @@
 .navbar-delete{
     float: right;
     margin-top: 15px;
+    display: inline;
+    position: absolute; 
+    left: calc(100% - 40px); 
+    top: 0%;
 }
 
 .form-request .form-title{
@@ -100,9 +111,26 @@
     left: 0;
 }
 
+.services-title{
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 36px;
+    color: #2c2c2c;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.services-anons{
+    font-size: 16px;
+    line-height: 24px;
+    color: #2c2c2c;
+    text-align: center;
+    margin-bottom: 32px;
+}
+
 .input-text{
     display: inline-block;
-    width: 100%;
+    width: 90%;
     border: 1px solid #999;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -116,4 +144,49 @@
     font-family: "PT Sans",Arial;
     color: #212121;
     padding: 14px 15px 15px 47px;
+}
+
+.services-anons img{
+    width: 37%;
+}
+
+.navbar-delete span {
+    display: block;
+    text-indent: -9999px;
+    width: 20px;
+    height: 20px;
+    background: url(https://admin.maxgenpromo.ru/static/landing/images/icon-delete.png) 0 0 no-repeat;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 900px) {
+    .card-content{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .form-request{
+        border-left: none;
+        height: auto;
+        min-height: auto;
+        margin-bottom: 30px;
+    }
+    .services-anons img{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .form-request{
+        padding: 0px 0px 0px 0px;
+    }
+    .input-text{
+        width: 70%;
+    }
+    .button-submit{
+        width: 74vw;
+    }
+    .form-request .form-title {
+    margin-top: 40px;
+    } 
 }
