--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -1,34 +1,34 @@
 @font-face {
     font-family: "adineuePRO-bold";
-    src: url("fonts/adineuePRO-bold.ttf") format("truetype");
+    src: url("/fonts/adineuePRO-bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "adineuePRO-kur-light";
-    src: url("fonts/adineuePRO-kur-light.woff") format("woff");
+    src: url("/fonts/adineuePROCyr-LightWeb.woff") format("woff");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "pt-sand";
-    src: url("fonts/pt-sans.ttf") format("truetype");
+    src: url("/fonts/pt-sans.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "pt-sans-bold";
-    src: url("fonts/pt-sans-bold.ttf") format("truetype");
+    src: url("/fonts/pt-sans-bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "century-gothic";
-    src: url("fonts/century-gothic") format("truetype");
+    src: url("/fonts/century-gothic.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
    }
@@ -44,6 +44,7 @@ html{
     font-size: 15px;
     width: 100%;
     max-width: 1920px;
+    margin: 0 auto;
 }
 
 .content-wrapper{
@@ -64,14 +65,107 @@ html{
     justify-content: center;
 }
 
+.jc-between{
+    justify-content: space-between;
+}
+
 ul{
     list-style: none;
 }
 
 a{
     text-decoration: none;
+    color: #4e4e4e;
 }
 
 .header-top ul li{
+    margin-right: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.border{
+    border-bottom: 1px solid #999999;
+    margin-bottom: 15px;
+}
+
+.menubutton{
+    width: 75px;
+    padding-top: 10px;
+    background-color: #843f8a;
+}
+
+.menuitem{
+    display: block;
+    width: 35px;
+    height: 4px;
+    background-color: #ffffff;
+    margin: 0 auto;
+    margin-bottom: 4px;
+}
+
+.button-header{
+    width: 180px;
+    height: 45px;
+    border: 2px solid #843f8a;
+    border-radius: 30px;
+    background: #ffffff;
+    color: #843f8a;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.proizv-button{
+    width: 195px;
+    height: 45px;
+    font-size: 18px;
+    border-radius: 30px;
+    background: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    border: 1px solid #c4c4c4;
+    color: #757575;
+}
+
+.phone{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
     color: #4e4e4e;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 0.5px;
+}
+
+.main-text{
+    font-size: 20px;
+    color: #4e4e4e;
+    text-align: center;
+    width: 100%;
+    max-width: 445px;
+    margin-top: 10px;
+}
+
+.about-item{
+    width: 100%;
+    max-width: 435px;
+}
+
+.about-item img{
+    box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.27);
+}
+
+.aside{
+    width: 100%;
+    max-width: 295px;
+    border: 1px solid #d4d4d4;
+}
+
+.aside a{
+    font-family: "pt-sand";
+    display: block;
+    font-size: 18px;
+    padding-left: 30px;
+    line-height: 25px;
+    color: #626262;
 }
