--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -45,6 +45,7 @@ html{
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
+    color: #626262;
 }
 
 .content-wrapper{
@@ -149,10 +150,19 @@ a{
 .about-item{
     width: 100%;
     max-width: 435px;
+    margin-bottom: 50px;
+    padding-right: 10px;
 }
 
 .about-item img{
     box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.27);
+    margin-right: 20px;
+}
+
+.about-header{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .aside{
@@ -169,3 +179,67 @@ a{
     line-height: 25px;
     color: #626262;
 }
+
+.header-about{
+    display: block;
+    font-size: 24px;
+    color: #626262;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #d4d4d4;
+}
+
+.about-info{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+.sub-title{
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: #626262;
+}
+
+.borders{
+    width: 100%;
+    height: 50px;
+    border-top: 1px solid #d0d0d0;
+    border-bottom: 1px solid #d0d0d0;
+}
+
+.about-text{
+    line-height: 20px;
+}
+
+.logo-footer{
+    position: relative;
+    top: -12px;
+}
+
+footer{
+    padding-bottom: 120px;
+}
+
+.footer-item{
+    margin-top: 75px;
+}
+
+.footer-item p{
+    font-family: "pt-sans-bold";
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+
+.footer-item a{
+    font-family: "pt-sans-bold";
+    display: block;
+    line-height: 30px;
+    font-size: 18px;
+    color: #898989;
+    letter-spacing: 1px;
+}
+
