--- a/chisto5/css/style.css
+++ b/chisto5/css/style.css
@@ -73,6 +73,7 @@ html{
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .content-wrapper{
@@ -120,9 +121,32 @@ a{
 }
 
 header{
-    background-image: url(/img/background.png);
+    background-image: url(../img/background.png);
     background-size: 100% 100%;
     height: 705px;
+}
+
+.header-button{
+    width: 250px;
+    height: 50px;
+    color: #bf2602;
+    background-color: #fee058;
+}
+
+.burger{
+    width: 50px;
+    height: 50px;
+    background-color: #fee058;
+    flex-direction: column;
+    box-shadow:  0px 6px 10px 0px rgba(50, 50, 50, 0.4);
+    cursor: pointer;
+}
+
+.burger-item{
+    width: 28px;
+    height: 5px;
+    background-color: #bf2602;
+    margin-bottom: 5px;
 }
 
 .bg-work-1{
@@ -189,6 +213,7 @@ header{
     max-width: 384px;
     border: 1px solid #b8b8b8;
     margin-bottom: 33px;
+    padding-right: 10px;
 }
 
 .advantage-wrapper{
@@ -211,7 +236,7 @@ header{
 }
 
 .cleaning{
-    background-image: url(/img/backround.png);
+    background-image: url(../img/backround.png);
 }
 
 .cleaning .bg-color-orange{
@@ -451,7 +476,7 @@ label{
     color: #ffffff;
     font-size: 106px;
     display: block;
-    background-image: url(/img/red.png);
+    background-image: url(../img/red.png);
     width: 196px;
     height: 223px;
     margin-left: 40px;
@@ -502,7 +527,7 @@ footer{
 }
 
 .footer-item:nth-child(1){
-    margin-right: 5%;
+    margin-right: 30px;
 }
 
 .footer-logo{
@@ -543,6 +568,114 @@ footer > div > div:nth-child(3) > p{
     font-family: "GothamPro-Bold";
 }
 
+.popup{
+    display: none;
+    position: fixed;
+    top: 70px;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 30;
+    max-width: 429px;
+    height: 590px;
+    background: rgb(140, 201, 46);
+    background: linear-gradient(105deg, rgb(140, 201, 46) 53%, rgb(25, 178, 3) 0%);
+    height: 515px;
+    left: 45%;
+    margin-left: -75px;
+    padding-left: 65px;
+}
+
+.popup p{
+    font-family: "AlegreyaSansSC-Black";
+    font-size: 30px;
+    color: #fcff00;
+    margin-right: 30px;
+}
+
+.popup p span{
+    color: #ffffff;
+}
+
+.overlay{
+    display:none;
+    position:fixed;
+    z-index: 20;
+    top:0;
+    right:0; 
+    left:0;
+    bottom:0;
+    background:#000; 
+    opacity:0.7;
+}
+
+.popup p:nth-child(3){
+    font-family: "FiraSans";
+    font-size: 18px;
+    color: #ffffff;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.input-popup{
+    background-color: #0f7800;
+    margin-bottom: 30px;
+}
+
+.input-popup::placeholder{
+    font-family: "FiraSans";
+    color: #fcff00;
+}
+
+.close{
+    width: 40px;
+    height: 40px;
+    background-color: #fee058;
+    margin-left: 89%;
+    cursor: pointer;
+}
+
+.popup-button{
+    text-transform: capitalize;
+    width: 300px;
+    height: 65px;
+    background-color: #fee058;
+    color: #0c5c01;
+    border-radius: 4px;
+}
+
+.aside-menu{
+    width: 100%;
+    max-width: 782px;
+    height: 100vw;
+    background-color: #fdc913;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 15px 20px;
+    -webkit-transition: left 0.3s;
+    -moz-transition: left 0.3s;
+    transition: left 0.3s;
+    z-index: 200;
+}
+
+@media screen and (max-width: 1243px){
+    div.content-wrapper.flex > img{
+        width: 38%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 1065px){
+    section.forms > div{
+        justify-content: center;
+    }
+    div.content-wrapper.flex > img{
+        width: 25%;
+    }
+}
+
 @media screen and (max-width: 950px) {
     section.working > div.content-wrapper.flex,
     footer > div,
@@ -561,9 +694,6 @@ footer > div > div:nth-child(3) > p{
     .advantage-wrapper,
     section.prices > div.content-wrapper.flex{
         justify-content: center;
-    }
-    .advantage-item{
-        padding-right: 10px;
     }
     .advantage-item span,
     .advantage-item p{
@@ -593,7 +723,21 @@ footer > div > div:nth-child(3) > p{
         font-size: 2em;
     }
     .work-skew,
-    .work-normal{
+    .work-normal,
+    .scew-block,
+    .normal-text{
         transform: skew(0deg);
+    }
+    div.forms-info > p.flex.align-cent{
+        font-size: 50px;
+    }
+    .inputs{
+        margin-right: 0px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .forms-info p:nth-child(2) > span{
+        margin-top: 20px;
     }
 }
