--- a/chisto5/css/style.css
+++ b/chisto5/css/style.css
@@ -73,7 +73,6 @@ html{
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
-    overflow: hidden;
 }
 
 .content-wrapper{
@@ -427,14 +426,15 @@ button{
   line-height: 0.8;
   transition: all .2s;
   color: #fdc913;
-  background-color: #fdc913;
-  overflow: hidden;
-
+  background: #fdc913;
+  width: 30px;
+  height: 30px;
 }
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
   transform: scale(0);
+
 }
 [type="checkbox"]:checked + label:after {
   opacity: 1;
@@ -446,6 +446,7 @@ label{
     color: #ffffff;
     font-size: 30px;
     line-height: 54px;
+    overflow: hidden;
 }
 
 .forms{
@@ -653,11 +654,25 @@ footer > div > div:nth-child(3) > p{
     top: 0;
     bottom: 0;
     margin: 0;
-    padding: 15px 20px;
-    -webkit-transition: left 0.3s;
-    -moz-transition: left 0.3s;
-    transition: left 0.3s;
-    z-index: 200;
+    z-index: 50;
+    left: 100%;
+}
+
+.aside-menu ul li{
+    font-family: "FiraSans-Black";
+    font-size: 25px;
+    color: #ffffff;
+    padding-left: 40px;
+    padding-top: 15px;
+}
+
+.aside-menu ul li{
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+
+.aside-menu ul li:hover{
+    background-color: #fed536;
 }
 
 @media screen and (max-width: 1243px){
