--- a/chisto5/css/style.css
+++ b/chisto5/css/style.css
@@ -168,7 +168,34 @@ header{
 
 .bg-color-forrest{
     background-color: #447c00;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
+}
+
+.top-text{
+    font-family: "GothamPro-Bold";
+    font-size: 50px;
+    color: #0d6700;
+    line-height: 56px;
+    width: 50%;
+    margin-top: 90px;
+}
+
+.top-bottom{
+    width: 357px;
+    height: 65px;
+    color: #0d6700;
+}
+
+.bottom-text{
+    font-family: "GothamPro-Bold";
+    color: #ffffff;
+    font-size: 20px;
+    width: 50%;
+    margin-top: 180px;
+}
+
+.top-text p span{
+    color: #19b203;
 }
 
 .working{
@@ -409,19 +436,101 @@ section.discounts > div.content-wrapper.flex > div:nth-child(3){
 }
 
 .feedback{
-    height: 670px;
     background-image: url(../img/s90RVvloRRAx.png);
 }
 
 .feedback-text{
     width: 295px;
-    height: 513px;
-    padding: 40px 20px 0 20px;
+    padding: 23px 20px 25px 20px;
     background-color: #ffffff;
     border-radius: 5px;
+    margin-bottom: 50px;
 }
 
 .feedback .flex{
+    position: relative;
+}
+
+.video-feedback{
+    flex-direction: column;
+    position: relative;
+}
+
+.video-feedback img{
+    position: absolute;
+    top: 300px;
+}
+
+.video-feedback p{
+    font-family: "GothamPro-Bold";
+    text-align: center;
+    font-size: 18px;
+    color: #ffffff;
+    margin-bottom: 12px;
+}
+
+.feedback-name{
+    font-family: "GothamPro-Bold";
+    color: #434343;
+    font-size: 18px;
+    margin-bottom: 23px;;
+}
+
+.feedback-parameters span{
+    font-family: "GothamPro-Bold";
+    color: #434343;
+    font-size: 14px;
+}
+
+.feedback-text > p:nth-child(3){
+    margin-bottom: 30px;
+}
+
+.feedback-text > p:nth-child(4){
+    color: #232323;
+    line-height: 23px;
+    letter-spacing: -0.5px;
+}
+
+.cleaning-girl{
+    position: absolute;
+    left: 140px;
+    width: auto !important;
+}
+
+div.content-wrapper.owl-carousel.slide-one.owl-theme.owl-loaded.owl-drag > div.owl-nav.disabled{
+    display: block;
+    position: relative;
+    bottom: 270px;
+}
+
+div.owl-nav.disabled > button.owl-prev{
+    border: 20px solid transparent; border-right: 20px solid #fdee87;
+    box-shadow: none;
+    outline: none;
+    position: absolute;
+    right: 96%;
+}
+
+div.owl-nav.disabled > button.owl-next{
+    border: 20px solid transparent; border-left: 20px solid #fdee87;
+    box-shadow: none;
+    outline: none;
+    position: absolute;
+    left: 96%;
+}
+
+div.owl-nav.disabled > button.owl-prev:hover,
+div.owl-nav.disabled > button.owl-next:hover{
+    background: transparent;
+}
+
+div.owl-nav.disabled > button.owl-prev > span,
+div.owl-nav.disabled > button.owl-next > span{
+    display: none;
+}
+
+.feedback-wrapper{
     padding-left: 50px;
     padding-right: 50px;
 }
@@ -465,8 +574,8 @@ section.discounts > div.content-wrapper.flex > div:nth-child(3){
   transition: all .2s;
   color: #fdc913;
   background: #fdc913;
-  width: 29px;
-  height: 29px;
+  width: 28px;
+  height: 28px;
 }
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
@@ -491,6 +600,7 @@ label{
     background: rgb(255, 240, 136);
     background: linear-gradient(110deg, rgb(255, 240, 136) 55%, rgb(252, 200, 19) 2%);
     border-bottom: 6px solid #ffffff;
+    margin-top: -10px;
 }
 
 .forms-info{
@@ -671,6 +781,11 @@ footer > div > div:nth-child(3) > p{
     background-color: #fee058;
     margin-left: 89%;
     cursor: pointer;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 9px;
+    font-size: 20px;
 }
 
 .popup-button{
@@ -793,6 +908,12 @@ footer > div > div:nth-child(3) > p{
     }
     .inputs{
         margin-right: 0px;
+    }
+    .cleaning-girl{
+        display: none !important;
+    }
+    .aside-menu ul li{
+        font-size: 13px;
     }
 }
 
